--- a/public/resources/css/user_payment.css
+++ b/public/resources/css/user_payment.css
@@ -1,6 +1,6 @@
   body {
     font-family: 'Segoe UI', sans-serif;
-    background-color: #071343;
+    background-color: #f3f4f9;
     margin: 0;
     padding: 2rem;
   }
