--- a/public/resources/css/footer.css
+++ b/public/resources/css/footer.css
@@ -3,7 +3,7 @@
 .last_part {
     background: linear-gradient(to bottom right, #04376e, #000);
     text-align: center;
-    padding: 40px 20px;
+    padding: 20px 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,9 +14,8 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
-    gap: 30px;
-    max-width: 1200px;
-    margin: 0 auto;
+    gap: 1px;
+    width: 90%;
 }
 
 .last_part li {
@@ -40,9 +39,16 @@
 }
 
 .box_container4 {
-    flex: 1 1 200px;
-    max-width: 250px;
+    flex: 1 1 100%;
+    width: 100%;
     text-align: left;
+}
+
+.last_part .social-icon-container {
+    height: 20vh;
+    justify-items: flex-end;
+    align-items: center;
+    
 }
 
 .last_part .icons {
@@ -50,15 +56,15 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
-    max-width: 300px;
-    margin-top: 20px;
+    width: 100%;
+    margin: 10px;
 }
 
 .box {
-    flex: 0 1 45%;
+    flex: 5 0 10%;
     color: #00F0FF;
-    padding: 15px;
-    font-size: 28px;
+    padding: 8px;
+    font-size: 18px;
     border-radius: 5px;
     text-align: center;
     box-shadow: 3px 8px 10px rgba(42, 164, 225, 0.42);
