--- a/public/resources/css/admin_dashboard.css
+++ b/public/resources/css/admin_dashboard.css
@@ -71,7 +71,7 @@ body, html {
   border-bottom: 1px solid #ddd;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   color: #000000;
   transition: background-color 0.3s, color 0.3s;
 }
@@ -85,6 +85,23 @@ iframe {
 .submenu {
   padding-left: 35px;
 }
+
+.profile-container {
+width: 100%;
+text-align: center;
+}
+
+.profile-container img {
+  width: 50px;
+  height: 50px;
+  padding: 1px;
+  margin: 1px;
+  margin-left: 8px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+
 
 .nested-submenu {
   padding-left: 50px;
@@ -156,6 +173,7 @@ body:not(.dark-mode) #toggleTheme {
   background-color: #f1f1f1;
   color: #000000;
 }
+
 
 
 
